--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="border-box-contaier">
   <dv-border-box-1>dv-border-box-1</dv-border-box-1>
 </div>
+<div class="border-box-contaier">
+  <dv-border-box-2>dv-border-box-2</dv-border-box-2>
+</div>
