--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,12 @@
 <div class="border-box-contaier">
   <dv-border-box-2>dv-border-box-2</dv-border-box-2>
 </div>
+<div class="border-box-contaier">
+  <dv-border-box-3>dv-border-box-3</dv-border-box-3>
+</div>
+<div class="border-box-contaier">
+  <dv-border-box-4>dv-border-box-4</dv-border-box-4>
+</div>
+<div class="border-box-contaier">
+  <dv-border-box-4 dvReverse>dv-border-box-4 reverse</dv-border-box-4>
+</div>
