feat: border-box-5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,9 @@
 <div class="border-box-contaier">
   <dv-border-box-4 dvReverse>dv-border-box-4 reverse</dv-border-box-4>
 </div>
+<div class="border-box-contaier">
+  <dv-border-box-5>dv-border-box-5</dv-border-box-5>
+</div>
+<div class="border-box-contaier">
+  <dv-border-box-5 dvReverse>dv-border-box-5 reverse</dv-border-box-5>
+</div>
