feat: border-box-6

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,3 +19,6 @@
 <div class="border-box-contaier">
   <dv-border-box-5 dvReverse>dv-border-box-5 reverse</dv-border-box-5>
 </div>
+<div class="border-box-contaier">
+  <dv-border-box-6>dv-border-box-6</dv-border-box-6>
+</div>
