feat: border-box-7

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,3 +22,7 @@
 <div class="border-box-contaier">
   <dv-border-box-6>dv-border-box-6</dv-border-box-6>
 </div>
+
+<div class="border-box-contaier">
+  <dv-border-box-7>dv-border-box-7</dv-border-box-7>
+</div>
