--- a/projects/data-view-angular/border-box-5/border-box-5.component.less
+++ b/projects/data-view-angular/border-box-5/border-box-5.component.less
@@ -8,7 +8,7 @@
     transform: rotate(180deg);
   }
 
-  .dv-svg-container {
+  .dv-border-svg-container {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -16,7 +16,7 @@
     height: 100%;
   }
 
-  .dv-svg-container polyline {
+  .dv-border-svg-container polyline {
     fill: none;
   }
 
