--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,3 +26,10 @@
 <div class="border-box-contaier">
   <dv-border-box-7>dv-border-box-7</dv-border-box-7>
 </div>
+
+<div class="border-box-contaier">
+  <dv-border-box-8>dv-border-box-8</dv-border-box-8>
+</div>
+<div class="border-box-contaier">
+  <dv-border-box-8 dvReverse>dv-border-box-8 reverse</dv-border-box-8>
+</div>
