--- a/projects/data-view-angular/border-box-8/border-box-8.component.html
+++ b/projects/data-view-angular/border-box-8/border-box-8.component.html
@@ -1,4 +1,4 @@
-<svg class="dv-svg-container" [style.width.px]="width" [style.height.px]="height">
+<svg class="dv-border-svg-container" [style.width.px]="width" [style.height.px]="height">
   <defs>
     <path [attr.id]="path" [attr.d]="pathD()" fill="transparent" />
     <radialGradient [attr.id]="gradient" cx="50%" cy="50%" r="50%">
@@ -8,7 +8,7 @@
 
     <mask [attr.id]="mask">
       <circle cx="0" cy="0" r="150" [attr.fill]="fill1">
-        <animateMotion [attr.dur]="dvDur+'s'" [attr.d]="pathD()" rotate="auto" repeatCount="indefinite" />
+        <animateMotion [attr.dur]="dvDur+'s'" [attr.path]="pathD()" rotate="auto" repeatCount="indefinite" />
       </circle>
     </mask>
   </defs>
